# payout-app

./: EXPLAINER.md  README.md
backend/: .env.sample  .gitignore  Dockerfile  backend.tar.xz  db.sqlite3  docker-compose.yml  pyproject.toml  seed.py
backend/auth/: exceptions.py  serializers.py  urls.py  utils.py  views.py
backend/core/: celery.py  settings.py  urls.py
backend/dashboard/: urls.py  views.py
backend/merchant/: serializers.py  urls.py  views.py
backend/payout/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/payout/migrations/: 0001_initial.py  0002_merchant_avaliable_balance_in_paise.py  0003_merchant_user.py  0004_payout_bank_account_id.py
frontend/: Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  AuthContext.tsx  api.ts  index.css  types.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Payout.tsx
server/: docker-compose.yml
server/nginx/: Dockerfile  nginx.conf
